住居のです。

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,4 +33,17 @@
     <location>/jsp/404.jsp</location>
     </error-page>
 
+  <servlet>
+    <servlet-name>S00003</servlet-name>
+    <servlet-class>web.S00003</servlet-class>
+    <init-param>
+      <param-name>javaEncoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>S00003</servlet-name>
+    <url-pattern>/ja/S00003/*</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
