--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
 
   <servlet>
     <servlet-name>S00003</servlet-name>
-    <servlet-class>web.S00003</servlet-class>
+    <servlet-class>jp.excd.servlet.S00003</servlet-class>
     <init-param>
       <param-name>javaEncoding</param-name>
       <param-value>UTF-8</param-value>
