--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,10 +30,23 @@
 
 	<error-page>
     <error-code>404</error-code>
-    <location>/jsp/404.jsp</location>
+    <location>/ja/404.jsp</location>
     </error-page>
-
-  <servlet>
+    
+    <servlet>
+		<servlet-name>S00004</servlet-name>
+		<servlet-class>jp.excd.servlet.S00004</servlet-class>
+		<init-param>
+			<param-name>javaEncoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>S00004</servlet-name>
+		<url-pattern>/ja/S00004/*</url-pattern>
+	</servlet-mapping>
+	
+	  <servlet>
     <servlet-name>S00003</servlet-name>
     <servlet-class>jp.excd.servlet.S00003</servlet-class>
     <init-param>
@@ -46,4 +59,16 @@
     <url-pattern>/ja/S00003/*</url-pattern>
   </servlet-mapping>
   
+ <servlet>
+		<servlet-name>S00001</servlet-name>
+		<servlet-class>jp.excd.servlet.S00001</servlet-class>
+		<init-param>
+			<param-name>javaEncoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>S00001</servlet-name>
+		<url-pattern>/ja/S00001</url-pattern>
+	</servlet-mapping>
 </web-app>
