--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,9 +29,65 @@
 	</servlet-mapping>
 
 	<error-page>
-    <error-code>404</error-code>
-    <location>/ja/404.jsp</location>
+    	<error-code>404</error-code>
+    	<location>/ja/404.jsp</location>
     </error-page>
+    
+	<error-page>
+    	<error-code>400</error-code>
+    	<location>/ja/400.jsp</location>
+    </error-page>
+
+	<servlet>
+    <servlet-name>S00005</servlet-name>
+    <servlet-class>jp.excd.servlet.S00005</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>S00005</servlet-name>
+    <url-pattern>/ja/S00005</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>S00005_2</servlet-name>
+    <servlet-class>jp.excd.servlet.S00005</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>S00005</servlet-name>
+    <url-pattern>/ja/S00005/*</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>S00006</servlet-name>
+    <servlet-class>jp.excd.servlet.S00006</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>S00006</servlet-name>
+    <url-pattern>/ja/S00006/*</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>S00006change</servlet-name>
+    <servlet-class>jp.excd.servlet.S00006</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>S00006change</servlet-name>
+    <url-pattern>/ja/S00006/change</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>S00006back</servlet-name>
+    <servlet-class>jp.excd.servlet.S00006</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>S00006back</servlet-name>
+    <url-pattern>/ja/S00006/back</url-pattern>
+  </servlet-mapping>
+  
     
     <servlet>
 		<servlet-name>S00004</servlet-name>
