--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -109,4 +109,18 @@
     <url-pattern>/ja/S00006/back</url-pattern>
   </servlet-mapping>
 
+<servlet>
+		<servlet-name>S00001</servlet-name>
+		<servlet-class>jp.excd.servlet.S00001</servlet-class>
+		<init-param>
+			<param-name>javaEncoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>S00001</servlet-name>
+		<url-pattern>/ja/S00001</url-pattern>
+	</servlet-mapping>
+
 </web-app>
